prototipo para conexion a api acon microprofile añadido

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
     <packaging>jar</packaging>
 <dependencies>
     <dependency>
+        <groupId>org.eclipse.microprofile</groupId>
+        <artifactId>microprofile</artifactId>
+        <version>5.0</version>
+        <type>pom</type>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
         <groupId>log4j</groupId>
         <artifactId>log4j</artifactId>
         <version>1.2.17</version>
