--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,21 @@
         <artifactId>json</artifactId>
         <version>20180130</version>
     </dependency>
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.12.0</version>
+    </dependency>
+    <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+        <version>1.15</version>
+    </dependency>
+    <dependency>
+        <groupId>commons-beanutils</groupId>
+        <artifactId>commons-beanutils</artifactId>
+        <version>1.9.4</version>
+    </dependency>
 </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
