--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
         <artifactId>commons-beanutils</artifactId>
         <version>1.9.4</version>
     </dependency>
+    <dependency>
+        <groupId>com.google.code.findbugs</groupId>
+        <artifactId>jsr305</artifactId>
+        <version>3.0.2</version>
+    </dependency>
 </dependencies>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
